namespace java oy.ids
#@namespace scala oy.ids

service IdService {
    i64 getNextId()
}

